@@ -1,6 +1,6 @@
 {
-  "count": 4,
-  "uniques": 3,
+  "count": 5,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2022-11-18T00:00:00Z",
@@ -15,6 +15,11 @@
     {
       "timestamp": "2022-11-29T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-12-01T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
