@@ -1,3 +1,11 @@
+2022-12-01T08:18:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3590753323 # 1080
+* notice: last 14d: unq all: 4 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 300 785 / 303 789
+* notice: next accum: outdated-unq outdated-all / unq all: 300 785 / 304 790
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-12-01]
+
 2022-11-29T08:19:03Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3572236958 # 1074
 * notice: last 14d: unq all: 3 4
